wb-mqtt-homeui (2.37.1) stable; urgency=medium

  * navigate directly to default dashboard, show current dashboard in expanded menu
  * allow to set SVG dashboard ad default

 -- Evgeny Boger <boger@wirenboard.com>  Sat, 04 Jun 2022 03:17:02 +0300

wb-mqtt-homeui (2.37.0) stable; urgency=medium

  * Boots selection on logs page is limited to "All boots"/"Last boot" options.

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>  Tue, 31 May 2022 17:06:06 +0500

wb-mqtt-homeui (2.36.0) stable; urgency=medium

  * "Deprecated template" message is added to names of deprecated device templates
  * Warning icon is added near deprecated template
  * Deprecation notice is added to expanded device editor

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>  Tue, 31 May 2022 16:29:03 +0500

wb-mqtt-homeui (2.35.3) stable; urgency=medium

  * Support fullscreen mode. Add to url ?fullscreen to hide navigation elements

 -- Sergey Safronov <sergey.safronov@wirenboard.ru>  Thu, 05 Apr 2022 17:42:00 +0500

wb-mqtt-homeui (2.35.2) stable; urgency=medium

  * rules: update the files list after creating a new file

 -- Sergey Safronov <sergey.safronov@wirenboard.ru>  Mon, 23 Apr 2022 19:52:00 +0500

wb-mqtt-homeui (2.35.1) stable; urgency=medium

  * Array elements creation bug in config editor with tabbed interface is fixed

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>  Wed, 25 May 2022 16:07:10 +0500

wb-mqtt-homeui (2.35.0) stable; urgency=medium

  * Support for device parameters specified as array is added

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>  Tue, 26 Apr 2022 14:12:17 +0500

wb-mqtt-homeui (2.34.2) stable; urgency=medium

  * Nested groups titles display is fixed in config editor
  * ui_options.wb.disable_title support for groups is added
  * Parameters ordering is fixed in config editor

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>  Mon, 25 Apr 2022 14:07:49 +0500
